apps/internal/home-assistant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svc-home-assistant
  labels:
    gitops: flux
