apps/internal/home-assistant/netpol-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-home-assistant-from-internal-ingress
  namespace: svc-home-assistant
spec:
  podSelector:
    matchLabels:
      app: home-assistant
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-20
      ports:
        - protocol: TCP
          port: 8123
